--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
   <meta name="twitter:card" content="summary_large_image">
 
   <link rel="stylesheet" href="css/main.css">
+  <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
   <script src="js/jquery.min.js"></script>
   <script src="js/organizador.js"></script>
+  <script>if (window.module) module = window.module;</script>
 </head>
 
 <body>
